demo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deploy
spec:
  replicas: 1 #要啟用幾個服務
  selector:
    matchLabels: #需與template中的labels相同
      app: dotnet-backend-app 
  template: #pod內容
    metadata:
      labels:
        app: dotnet-backend-app 
    spec:
      containers:
      - name: dotnet-backend-app #容器名稱
        image: jhinwei1228/backendapp #映像檔，預設找Docker Hub
        imagePullPolicy: Always #更新頻率，假如本地有image就不進行更新
        resources: #用在hpa
          requests: #基本保留cpu占用量
            cpu: "0.5"
          limits: #超過會把Pod砍掉，代表可能需要調整機器效能
            cpu: "1"
        ports:
          - containerPort: 80 #開放容器內的Port號
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: dotnet-backend-app #需與Pod的Labels一樣，才能連結
  type: LoadBalancer #設定才能在AKS中建立一個公用IP
  ports:
    - targetPort: 80 #Pod裡的服務運行的port
      name: port8080
      port: 80 #外部連線的port，公用IP:port
