demo/backendIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendingress-deployment
  labels:
    app: backendingress-deploy
spec:
  replicas: 1 #要啟用幾個服務
  selector:
    matchLabels: #需與template中的labels相同
      app: dotnet-backendingress-app 
  template: #pod內容
    metadata:
      labels:
        app: dotnet-backendingress-app 
    spec:
      containers:
      - name: dotnet-backendingress-app #容器名稱
        image: jhinwei1228/ingresstest #映像檔，預設找Docker Hub
        imagePullPolicy: Always #更新頻率，假如本地有image就不進行更新
        resources: #用在hpa
          requests: #基本保留cpu占用量
            cpu: "0.5"
          limits: #超過會把Pod砍掉，代表可能需要調整機器效能
            cpu: "1"
        ports:
          - containerPort: 80 #開放容器內的Port號
---
apiVersion: v1
kind: Service
metadata:
  name: backendingress-service
  # annotations:
  #   service.beta.kubernetes.io/azure-load-balancer-ipv4: 20.194.148.103
spec:
  selector:
    app: dotnet-backendingress-app #需與Pod的Labels一樣，才能連結P
  type: ClusterIP  #設定才能在AKS中建立一個公用IP
  ports:
    - targetPort: 80 #Pod裡的服務運行的port
      name: port8080
      port: 80 #外部連線的port，公用IP:port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
   - host: 3b8.site
     http:
       paths:
       - path: /backend
         pathType: Prefix
         backend:
           service:
             name: backendingress-service
             port:
               number: 80

# - http:
#     paths:
#     - path: /
#       pathType: Exact 
#       backend:
#         service:
#           name: backend-service
#           port:
#             number: 80
